objects/ssot__GeneratedOperationPlanStep__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOperationPlanId__c</fullName>
        <label>Generated Operation Plan</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Generated Operation Plan Step Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedActionName__c</fullName>
        <label>Related Action Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedActionReferenceId__c</fullName>
        <label>Related Action Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedActionReferenceObject__c</fullName>
        <label>Related Action Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StepSummaryText__c</fullName>
        <label>Step Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128374812_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlanStep_Generated_rel</label>
        <referenceTo>ssot__GeneratedOperationPlan__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlanStep_Generated_rel</relationshipLabel>
        <relationshipName>rel_1723128374812_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>